# websocked

./: README.md  websocket.sln
libwebsocket_client/: CMakeLists.txt  client.cc  libeay32.lib  libwebsocket_client.vcxproj  libwebsocket_client.vcxproj.filters
libwebsocket_server/: CMakeLists.txt  libwebsocket_server.vcxproj  libwebsocket_server.vcxproj.filters  server.cc  ssleay32.lib  websockets_static.lib
libwebsocket_server/include/: lws_config.h
libwebsocket_server/x64/Debug/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mt.command.1.tlog  mt.read.1.tlog  mt.write.1.tlog  vc100.idb
libwebsockets-3.1.0/: .rnd  ALL_BUILD.vcxproj  CPackConfig.cmake  CPackSourceConfig.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  LibwebsocketsConfig.cmake  LibwebsocketsTargets.cmake  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  dist.vcxproj  dist.vcxproj.filters  libwebsockets.sln  linux下libwebsockets编译及实例.docx  lws_config_private.h  test-client.vcxproj  test-client.vcxproj.filters  test-lejp.vcxproj  test-lejp.vcxproj.filters  test-server.vcxproj  test-server.vcxproj.filters  websockets.vcxproj  websockets.vcxproj.filters  websockets_shared.vcxproj  websockets_shared.vcxproj.filters
libwebsockets-3.1.0/win32port/: version.rc
mywebsocket/: chat.htm  connection.cpp  mywebsocket.vcxproj  mywebsocket.vcxproj.filters
websocket++/: broadcast_server.cpp  echo_server.cpp  websocket++.vcxproj  websocket.cpp
websocket++_client/: echo_client.cpp  websocket++_client.vcxproj
(+144 files in other folders)
